--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       }
       
       .title {
-        position: absolute;
+        position: bottom;
         top: 30px;
         font-size: 45px;
         color: white;
@@ -53,7 +53,7 @@
       }
 
       .reloadBtn:hover {
-        background-color: #eaeaea;
+        background-color: #ff6bba;
       }
       
       .night {
