--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       }
       
       .title {
-        position: bottom;
+        position: absolute;
         top: 30px;
         font-size: 45px;
         color: white;
@@ -41,7 +41,7 @@
       }
       
       .reloadBtn {
-        position: absolute;
+        position:absolut;bottom:0;
         top: 110px;
         z-index: 999;
         padding: 8px 30px;
@@ -239,7 +239,7 @@
         width: 9vmin;
         height: 4vmin;
         border-radius: 50%;
-        background-color: #fff;
+        background-color: #44142d;
       }
       .flower__white-circle::after {
         content: "";
