--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       }
       
       .reloadBtn {
-        position:absolut;bottom:0;
+        position:absolute;bottom:0;
         top: 110px;
         z-index: 999;
         padding: 8px 30px;
@@ -228,7 +228,7 @@
         transform-origin: bottom left;
         border-radius: 4vmin 10vmin 4vmin 4vmin;
         transform: translate(0%, 18%) rotateX(70deg) rotate(-43deg);
-        background-image: linear-gradient(to top, #39c6d6, #a7ffee);
+        background-image: linear-gradient(to top, #44142d,#44142d);
         z-index: 1;
         opacity: 0.8;
       }
@@ -239,7 +239,7 @@
         width: 9vmin;
         height: 4vmin;
         border-radius: 50%;
-        background-color: #44142d;
+        background-color: #fff;
       }
       .flower__white-circle::after {
         content: "";
